Bug 1671626 - part2 : set metadata on nowPlayingInfo. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D100077